--- a/TTH/index.html
+++ b/TTH/index.html
@@ -5,15 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Visualization - 21127608</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
-  <div id="chart"></div>
-
+  <div id="chart1"></div>
   <div class="titleWrapper">
-    <span class="title">Biểu đồ thống kê số tai nạn theo thời tiết</span>
+    <span class="title">Biểu đồ thể hiện số người bị thương của các tai nạn xảy ra vào buổi sáng qua các năm</span>
   </div>
 
-  <script src="index.js"></script>
+  <div id="chart2"></div>
+  <div class="titleWrapper">
+    <span class="title">Biểu đồ thể hiện số lượng tác phẩm nghệ thuật theo loại</span>
+  </div>
+
+  <script src="/js/main2.js"></script>
+  <script src="/js/main1.js"></script>
 </body>
 </html>
