--- a/TTH/index.html
+++ b/TTH/index.html
@@ -10,15 +10,28 @@
 <body>
   <div id="chart1"></div>
   <div class="titleWrapper">
-    <span class="title">Biểu đồ thể hiện số người bị thương của các tai nạn xảy ra vào buổi sáng qua các năm</span>
+    <span class="title">Biểu đồ thể hiện top 5 loại va chạm giao thông thường xuyên xảy ra</span>
   </div>
+
 
   <div id="chart2"></div>
+  <div style="display: flex; align-self: center;">
+    <h4 style="margin-bottom: 10px; margin-right: 30px;">Chú thích</h4>
+    <div  style="margin-right: 30px;">
+      <div style="width: 16px; height: 16px; background-color:orange; display:block; text-align: center"></div>
+      <p>Số vụ tai nạn</p>
+    </div>
+    <div>
+      <div style="width: 16px; height: 16px; background-color:red; display:flex; text-align: center"></div>
+      <p>Số người bị thương</p>
+    </div>
+  </div>
   <div class="titleWrapper">
-    <span class="title">Biểu đồ thể hiện số lượng tác phẩm nghệ thuật theo loại</span>
+    <span class="title">Biểu đồ thể hiện tối tương quan giữa số người bị thương và số vụ tai nạn giao thông qua các năm</span>
   </div>
 
-  <script src="/js/main2.js"></script>
+
   <script src="/js/main1.js"></script>
+  <script src="/js/main2.js"></script>
 </body>
 </html>
