--- a/src/index_Tri.html
+++ b/src/index_Tri.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div id="chart1"></div>
@@ -19,7 +19,7 @@
     <span class="title">Biểu đồ thể hiện số lượng tác phẩm nghệ thuật theo loại</span>
   </div>
 
-  <script src="/js/main1_Tri.js"></script>
-  <script src="/js/main2_Tri.js"></script>
+  <script src="./js/main1_Tri.js"></script>
+  <script src="./js/main2-Tri.js"></script>
 </body>
 </html>
