update file path

--- a/src/index_Hieu.html
+++ b/src/index_Hieu.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Visualization - 21127608</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/assets/style_Hieu.css">
 </head>
 <body>
   <div id="chart1"></div>
   <div class="titleWrapper">
-    <span class="title">Biểu đồ thể hiện top 5 loại va chạm giao thông thường xuyên xảy ra</span>
+    <span class="title" style="text-align: center; font-size: 20px; font-weight: 600; color:rgb(42, 74, 177);">Biểu đồ thể hiện top 5 loại va chạm giao thông thường xuyên xảy ra</span>
   </div>
 
 
@@ -27,11 +27,11 @@
     </div>
   </div>
   <div class="titleWrapper">
-    <span class="title">Biểu đồ thể hiện tối tương quan giữa số người bị thương và số vụ tai nạn giao thông qua các năm</span>
+    <span class="title" style="text-align: center; font-size: 20px; font-weight: 600; color:rgb(42, 74, 177);">Biểu đồ thể hiện tối tương quan giữa số người bị thương và số vụ tai nạn giao thông qua các năm</span>
   </div>
 
 
-  <script src="/js/main1_Hieu.js"></script>
-  <script src="/js/main2_Hieu.js"></script>
+  <script src="./js/main1_Hieu.js"></script>
+  <script src="./js/main2_Hieu.js"></script>
 </body>
 </html>
