--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>TQHDL</title>
   </head>
   <body>
@@ -12,10 +12,10 @@
       <a href="/src/Kha/index.html">
         <div class="member">Kha</div>
       </a>
-      <a href="">
+      <a href="/index_Hieu.html">
         <div class="member">Hiếu</div>
       </a>
-      <a href="">
+      <a href="/index_Tri.html">
         <div class="member">Trí</div>
       </a>
       <a href="">
