--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
       <a href="/src/Kha/index.html">
         <div class="member">Kha</div>
       </a>
-      <a href="/index_Hieu.html">
+      <a href="/Hieu/index.html">
         <div class="member">Hiếu</div>
       </a>
-      <a href="/index_Tri.html">
+      <a href="/Tri/index.html">
         <div class="member">Trí</div>
       </a>
       <a href="">
