--- a/src/Hieu/index.html
+++ b/src/Hieu/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Visualization - 21127608</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="/assets/style_Hieu.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="chart1"></div>
@@ -31,7 +31,7 @@
   </div>
 
 
-  <script src="./js/main1_Hieu.js"></script>
-  <script src="./js/main2_Hieu.js"></script>
+  <script src="main1.js"></script>
+  <script src="main2.js"></script>
 </body>
 </html>
