--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
       <a href="/Tri/index.html">
         <div class="member">Trí</div>
       </a>
+      <a href="/src/Nhi/index.html">
+        <div class="member">Nhi</div>
+      </a>
       <a href="">
         <div class="member">Trinh</div>
       </a>
