--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,26 @@
   </head>
   <body>
     <h1 class="title">TRỰC QUAN HÓA DỮ LIỆU</h1>
+    <h2 style="text-align: center;">Thành viên nhóm:</h2>
+    <h3 style="text-align: center;">21127065 - Trần Bình Kha</h3>
+    <h3 style="text-align: center;">21127385 - Phạm Uyễn Nhi</h3>
+    <h3 style="text-align: center;">21127456 - Võ Cao Trí</h3>
+    <h3 style="text-align: center;">21127459 - Nguyễn Thị Phương Trinh</h3>
+    <h3 style="text-align: center;">21127608 - Trần Trung Hiếu</h3>
     <div class="memberWrapper">
       <a href="/src/Kha/index.html">
         <div class="member">Kha</div>
       </a>
-      <a href="/Hieu/index.html">
+      <a href="/src/Hieu/index.html">
         <div class="member">Hiếu</div>
       </a>
-      <a href="/Tri/index.html">
+      <a href="/src/Tri/index.html">
         <div class="member">Trí</div>
       </a>
       <a href="/src/Nhi/index.html">
         <div class="member">Nhi</div>
       </a>
-      <a href="">
+      <a href="./Trinh/">
         <div class="member">Trinh</div>
       </a>
     </div>
