--- a/src/Nhi/index.html
+++ b/src/Nhi/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="chart"></div>
   <div class="titleWrapper">
-    <span class="title">Biểu đồ so sánh số lượng tai nạn xe ở thành phố Nashville, Antioch và Old Hickory tháng 9/2021 </span>
+    <span class="title">Biểu đồ tương quan số lượng người bỏ trốn và số người bị thương qua các năm</span>
   </div>
 
   <!-- Thêm một div mới để chứa biểu đồ thứ hai -->
