--- a/src/Hieu/index.html
+++ b/src/Hieu/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="chart1"></div>
   <div class="titleWrapper">
-    <span class="title" style="text-align: center; font-size: 20px; font-weight: 600; color:rgb(42, 74, 177);">Biểu đồ thể hiện top 5 loại va chạm giao thông thường xuyên xảy ra</span>
+    <span class="title" style="text-align: center; font-size: 20px; font-weight: 600; color:rgb(42, 74, 177);">Biểu đồ thể hiện top 5 loại va chạm giao thông thường xuyên xảy ra năm 2019</span>
   </div>
 
 
